--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -178,6 +178,35 @@ nav ul li:hover, nav ul li.active {
   background:url(img/logo.jpg);
 }
 
+.join {
+    border: 0;
+    border-radius: 2px;
+    background-color: #fff;
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    color: #1976d2;
+    outline: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+    transform:scale(0.9);
+    -webkit-transform:scale(0.9);
+    transition: all 0.1s;
+    min-width: 160px;
+      height: 36px;
+      padding: 0 20px;
+      cursor: pointer;
+}
+.join:hover {
+  transform: none;
+}
+.join:active {
+  background-color: darken(#FFF,7%);
+  padding-top: 2px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.24);
+
+}
+
 .section:first-of-type {
     padding-top: 140px;
 }
